# disque-cli

./: .travis.yml  Cargo.toml  README.md  cli.yml
benches/: lib.rs
src/: command.rs  connection.rs  disque.rs  lib.rs
