[package]
name = "disque-cli"
version = "0.1.1"
authors = ["Qing Yan <admin@zensh.com>"]
description = "Redis CLI."
documentation = "https://github.com/iorust/disque-cli"
homepage = "https://github.com/iorust/disque-cli"
repository = "https://github.com/iorust/disque-cli.git"
readme = "README.md"
keywords = ["disque", "CLI"]
license = "MIT/Apache-2.0"

[dependencies]
resp = "^0.3.2"

[dependencies.clap]
version = "^2.1.1"
default-features = false
features = ["yaml"]

[[bin]]
name = "disque-cli"
